@@ -1,12 +1,13 @@
-plugin.tx_ratings_pi1 = USER
+plugin.tx_ratings_pi1 = USER_INT
 plugin.tx_ratings_pi1 {
-    userFunc = tx_ratings_pi1->main
-    storagePid = {$plugin.tx_ratings_pi1.storagePid}
-    templateFile = {$plugin.tx_ratings_pi1.templateFile}
-    minValue = {$plugin.tx_ratings_pi1.minValue}
-    maxValue = {$plugin.tx_ratings_pi1.maxValue}
-    ratingImageWidth = {$plugin.tx_ratings_pi1.ratingImageWidth}
-    additionalCSS = {$plugin.tx_ratings_pi1.additionalCSS}
-    mode = {$plugin.tx_ratings_pi1.mode}
-    disableIpCheck = {$plugin.tx_ratings_pi1.disableIpCheck}
+	includeLibs = EXT:ratings/class.tx_ratings_pi1.php
+	userFunc = tx_ratings_pi1->main
+	storagePid = {$plugin.tx_ratings_pi1.storagePid}
+	templateFile = {$plugin.tx_ratings_pi1.templateFile}
+	minValue = {$plugin.tx_ratings_pi1.minValue}
+	maxValue = {$plugin.tx_ratings_pi1.maxValue}
+	ratingImageWidth = {$plugin.tx_ratings_pi1.ratingImageWidth}
+	additionalCSS = {$plugin.tx_ratings_pi1.additionalCSS}
+	mode = {$plugin.tx_ratings_pi1.mode}
+	disableIpCheck = {$plugin.tx_ratings_pi1.disableIpCheck}
 }
